Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
Description
Properties-file like the following are not processed by the PropertyConfigurator properly. The rollingPolicy and triggerPolicy are not created as configured.
—
log4j.appender.FILE=RollingFileAppender
log4j.appender.FILE.File=sample.log
log4j.appender.FILE.rollingPolicy=FixedWindowRollingPolicy
log4j.appender.FILE.rollingPolicy.MaxIndex=3
log4j.appender.FILE.triggeringPolicy=SizeBasedTriggeringPolicy
log4j.appender.FILE.triggeringPolicy.MaxFileSize=1MB
Attachments
Attachments
Issue Links
- links to