LOGCXX-102 Parse rolling file appender options from properties file (#100)

* LOGCXX-102 Parse rolling file appender options from properties file